--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install -r requirements.txt
           pip install -r requirements-dev.txt
 
       - name: Ruff
@@ -39,3 +40,6 @@ jobs:
         with:
           name: coverage-xml
           path: coverage.xml
+      - name: Runner smoke (mock feed)
+        run: |
+          MODE=paper python -m prod_core.runner --max-seconds 10 --skip-feed-check --use-mock-feed
